--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,11 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+html {
+  scroll-behavior: smooth;
+}
 /* @custom-variant dark (&:is(.dark *));
+
 
 @theme inline {
   --color-background: var(--background);
